added option to delete week, fix getCurBalance
